<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentRegistration">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dashboard_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:navigationIcon="@drawable/ic_arrow_white_24dp"
        app:subtitle="SAS"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/give_attendance"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white">

        <!--  This is the main content -->
        <LinearLayout
            android:id="@+id/panelClg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/blue_border_rounded_less_cornwe"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtClgName"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/clg"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textClgValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clgName"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textDept"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/dept"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDeptValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dept"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textClass"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/clas"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textClassValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clas"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/panelSubReload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/panelClg"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/panelSub"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border_rounded_cornwe">

                <Spinner
                    android:id="@+id/spinSub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:prompt="@string/sub_prompt"
                    android:spinnerMode="dialog" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imgReload"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/reload"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <Button
            android:id="@+id/btnPresent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/panelSubReload"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/blue_fill_rounded_color"
            android:enabled="false"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/present"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


        <!--  This is the title label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@android:color/white"
            android:padding="5dp"
            android:text="@string/college_information"
            android:textColor="@color/colorBlue"
            android:textStyle="italic" />

    </RelativeLayout>


</LinearLayout>