<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="@drawable/login_top"
        android:orientation="vertical">

        <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:src="@drawable/login_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Britannic"
            android:gravity="center_horizontal"
            android:text="@string/sas"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/blue_border_rounded_cornwe">

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/imgUser"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/email" />

        <EditText
            android:id="@+id/editUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgUser"
            android:background="@android:color/transparent"
            android:ems="15"
            android:hint="@string/useremail"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:autofillHints="@string/useremail"
            android:textSize="18sp" tools:targetApi="o" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border_rounded_cornwe">

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/imgPass"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgPass"
            android:background="@android:color/transparent"
            android:ems="15"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:autofillHints="@string/pass"
            android:textSize="18sp" tools:targetApi="o" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:background="@drawable/blue_fill_rounded_color"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txtForgotPass"
        android:textColor="#1566e0"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/forgot_pass" />

    <TextView
        android:id="@+id/txtCreateAc"
        android:textColor="#1566e0"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:textSize="16sp"
        android:text="@string/createAc" />


</LinearLayout>

